# PW_plant_management_system

./: .gitignore  CASE_STUDY.md  DEMO_SCRIPT.md  FRONTEND_IMPLEMENTATION_ROADMAP.md  PRODUCTION.md  PROJECT_MODULE_PLAN.md  README.md  clean_spare_parts.py  docker-compose.yml  fix_physical_verification.py  render.yaml  requirements.txt  run_etl.py
backend/: .dockerignore  .env.example  =0.8.0  API_DOCUMENTATION.md  Dockerfile  Dockerfile.dev  TEST_INSTRUCTIONS.md  get_auth_token.py  pyproject.toml  quick_test.sh  requirements-dev.txt  requirements.txt  test_preview_upload.py
backend/app/: __init__.py  config.py  main.py
backend/docs/: DATABASE.md  README.md
backend/migrations/: 001_add_division_column.sql  002_add_division_to_filtered_stats.sql  003_add_currency_support_to_spare_parts.sql  004_expose_ngn_totals_in_views.sql  005_switch_db_functions_to_total_cost_ngn.sql  006_switch_plant_shared_costs_to_ngn.sql  007_projects_operational_tables.sql  008_projects_register_upgrade.sql  009_register_views_and_benchmarks.sql  010_client_types_and_register_reset.sql  011_allow_legacy_status.sql  012_collapse_condition_taxonomy.sql  013_asof_report_support.sql  014_phase2_weekly_ingest_tables.sql  015_project_submission_status_view.sql  016_plant_officer_role.sql  017_kpi_rebuild.sql  018_fix_condition_default.sql  019_purge_retired_conditions.sql  020_certificates_payments_locked.sql  021_hierarchical_beme_bills.sql  022_promotions.sql  023_materials_sections.sql  024_workbook_verbatim_columns.sql  025_fleet_aliases.sql  026_multicurrency_aggregates.sql  027_beme_tail_and_flag_resolution.sql  028_contract_schedule_fields.sql  029_md_gpm_roles.sql
backend/scripts/: backfill_beme_tail.py  backfill_clients.py  create_admin.py  dryrun_accept.py  reingest_akwa_ibom.py  seed_client_default_states.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_award_letters_golden.py  test_award_letters_import.py  test_clients_backfill.py  test_condition_taxonomy.py  test_db_isolation.py  test_etl_worker.py  test_health.py  test_import_resilience.py  test_migration_008.py  test_migration_014.py  test_plants.py  (+14 more)
(+294 files in other folders)
